--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,43 @@
-<!-- index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>MY APP</title>
+    <title>CRUD Express App</title>
   </head>
   <body>
-    <form action="/quotes" method="POST">
-      <input type="text" placeholder="name" name="name">
-      <input type="text" placeholder="quote" name="quote">
-      <button type="submit">Submit</button>
-    </form>
-    <h2> quotes </h2>
-    <ul>
-      <!-- Loop through quotes -->
-      <% for(var i = 0; i < quotes.length; i++) {%>
-        <li class="quote">
-          <!-- Output name from the iterated quote object -->
-          <span><%= quotes[i].name %></span>:
-          <!-- Output quote from the iterated quote object -->
-          <span><%= quotes[i].quote %></span>
-        </li>
-      <% } %>
-    </ul>
+    <section id="Add-quote">
+      <form action="/quotes" method="POST">
+        <input type="text" placeholder="name" name="name">
+        <input type="text" placeholder="quote" name="quote">
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+
+    <section id="Update-quote">
+      <div>
+        <h2>Darth Vadar invades!</h2>
+        <p>
+          Replace first Yoda's quote with a quote written by Darth Vadar
+        </p>
+        <button id="update-button">Replace Yoda's quote</button>
+      </div>
+    </section>
+
+    <section id="Display-quotes">
+      <h2> quotes </h2>
+      <ul>
+        <!-- Loop through quotes -->
+        <% for(var i = 0; i < quotes.length; i++) {%>
+          <li class="quote">
+            <!-- Output name from the iterated quote object -->
+            <span><%= quotes[i].name %></span>:
+            <!-- Output quote from the iterated quote object -->
+            <span><%= quotes[i].quote %></span>
+          </li>
+        <% } %>
+      </ul>
+    </section>
+
+    <script src="/main.js"></script>
   </body>
 </html>
