Created delete function (button) and css stylesheet

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>CRUD Express App</title>
+    <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <section id="Add-quote">
@@ -21,6 +22,17 @@
         </p>
         <button id="update-button">Replace Yoda's quote</button>
       </div>
+    </section>
+
+    <section id="delete-quote">
+      <div>
+        <h2>Remove Darth Vader!</h2>
+        <p>
+          Delete one of Darth Vader's quotes. Does nothing if there are no more Darth Vader quotes
+        </p>
+        <button id="delete-button">Delete Darth Vader's quote</button>
+      </div>
+      <div id="message"></div>
     </section>
 
     <section id="Display-quotes">
